pindah index.html ke root

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Tetris</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
     <canvas id="my-canvas" width="360" height="600"></canvas>
@@ -13,6 +13,6 @@
 
 
     <!-- SCRIPT -->
-    <script src="script/tetris.js"></script>
+    <script src="src/script/tetris.js"></script>
 </body>
 </html>
